--- a/config/fbihtax_config.json
+++ b/config/fbihtax_config.json
@@ -1,8 +1,15 @@
 {
 	"pdf": {
-		"cacheLocation": "tax.pdf",
-		"downloadUrl": "http://www.pufbih.ba/v1/public/upload/obrasci/b839c-obrazac-ams_bos_web.pdf",
 		"pdftk_path": "pdftk"
 	},
-	"output_location": "."
+	"ams": {
+		"cacheLocation": "amscache.pdf",
+		"downloadUrl": "http://www.pufbih.ba/v1/public/upload/obrasci/b839c-obrazac-ams_bos_web.pdf"
+	},
+	"gpd": {
+		"cacheLocation": "gpdcache.pdf",
+		"downloadUrl": "http://www.pufbih.ba/v1/public/upload/obrasci/a9d63-94b8a-obrazac_gpd_1051_ver1__bos_web2.pdf"
+	},
+	"output_location": ".",
+	"db_location": "fbihtax.db.json"
 }
